[project]
name = "rascalapi"
version = "1.0.0"
description = "An API with basic user and event management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]<1.0.0,>=0.114.2",
    "pydantic>2.0",
    "sqlmodel<1.0.0,>=0.0.21",
    "psycopg2-binary>=2.9.11",
    "python-dotenv",
    "pwdlib[bcrypt]>=0.3.0",
    "PyJWT>=2.12.1",
    "sqlmodel<1.0.0,>=0.0.21",
]
